--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@kitware/vtk.js": "^34.16.2",
     "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
     "lucide-react": "^0.554.0",
@@ -18,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
     "react-router-dom": "^7.9.6",
+    "three": "^0.160.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
@@ -26,6 +28,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/three": "^0.160.0",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
