--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
+email-validator>=2.0.0
 
 # Firebase Integration
 firebase-admin>=6.0.0
